feat(core): dodanie wzorców Command i Strategy