@@ -7,9 +7,10 @@ import java.nio.file.Path;
 
 public class SaveLossless implements SaveStrategy{
 
+    @Override
     public void save(Document document, Path filePath) {
         try {
-            Files.write(filePath, document.getContent(), StandardCharsets.UTF_8);
+            Files.writeString(filePath, document.getContent2(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             e.printStackTrace();
         }
